libqt6c/src/libqlocale.hpp

typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QLocale QLocale;
typedef struct QTime QTime;
uint16_t QLocale_Language(const QLocale* self);
uint16_t QLocale_Script(const QLocale* self);
uint16_t QLocale_Country(const QLocale* self);
libqt_string QLocale_CountryToString(uint16_t country);
libqt_string QLocale_ScriptToString(uint16_t script);
void QLocale_SetDefault(const QLocale* locale);
QLocale* QLocale_C();
QLocale* QLocale_System();
libqt_list /* of QLocale* */ QLocale_MatchingLocales(uint16_t language, uint16_t script, uint16_t territory);
libqt_list /* of uint16_t */ QLocale_CountriesForLanguage(uint16_t lang);
void QLocale_SetNumberOptions(QLocale* self, int options);
int QLocale_NumberOptions(const QLocale* self);
libqt_string QLocale_QuoteString(const QLocale* self, const libqt_string str);
libqt_string QLocale_CreateSeparatedList(const QLocale* self, const QStringList* strl);
int16_t QLocale_ToShort22(const QLocale* self, const libqt_string s, bool* ok);
uint16_t QLocale_ToUShort22(const QLocale* self, const libqt_string s, bool* ok);
int QLocale_ToInt22(const QLocale* self, const libqt_string s, bool* ok);
unsigned int QLocale_ToUInt22(const QLocale* self, const libqt_string s, bool* ok);
long QLocale_ToLong22(const QLocale* self, const libqt_string s, bool* ok);
unsigned long QLocale_ToULong22(const QLocale* self, const libqt_string s, bool* ok);
long long QLocale_ToLongLong22(const QLocale* self, const libqt_string s, bool* ok);
unsigned long long QLocale_ToULongLong22(const QLocale* self, const libqt_string s, bool* ok);
float QLocale_ToFloat22(const QLocale* self, const libqt_string s, bool* ok);
double QLocale_ToDouble22(const QLocale* self, const libqt_string s, bool* ok);
libqt_string QLocale_ToString24(const QLocale* self, double f, char format);
libqt_string QLocale_ToString32(const QLocale* self, double f, char format, int precision);
libqt_string QLocale_ToString25(const QLocale* self, float f, char format);
libqt_string QLocale_ToString33(const QLocale* self, float f, char format, int precision);
libqt_string QLocale_ToString26(const QLocale* self, QDate* date, int format);
libqt_string QLocale_ToString27(const QLocale* self, QTime* time, int format);
libqt_string QLocale_ToString28(const QLocale* self, const QDateTime* dateTime, int format);
libqt_string QLocale_DateFormat1(const QLocale* self, int format);
libqt_string QLocale_TimeFormat1(const QLocale* self, int format);
libqt_string QLocale_DateTimeFormat1(const QLocale* self, int format);
QDate* QLocale_ToDate22(const QLocale* self, const libqt_string stringVal, int param2);
QTime* QLocale_ToTime22(const QLocale* self, const libqt_string stringVal, int param2);
QDateTime* QLocale_ToDateTime22(const QLocale* self, const libqt_string stringVal, int format);
libqt_string QLocale_MonthName2(const QLocale* self, int param1, int format);
libqt_string QLocale_StandaloneMonthName2(const QLocale* self, int param1, int format);
libqt_string QLocale_DayName2(const QLocale* self, int param1, int format);
libqt_string QLocale_StandaloneDayName2(const QLocale* self, int param1, int format);
libqt_string QLocale_CurrencySymbol1(const QLocale* self, int param1);
libqt_string QLocale_ToCurrencyString22(const QLocale* self, long long param1, const libqt_string symbol);
libqt_string QLocale_ToCurrencyString23(const QLocale* self, unsigned long long param1, const libqt_string symbol);
libqt_string QLocale_ToCurrencyString24(const QLocale* self, int16_t i, const libqt_string symbol);
libqt_string QLocale_ToCurrencyString25(const QLocale* self, uint16_t i, const libqt_string symbol);
libqt_string QLocale_ToCurrencyString26(const QLocale* self, int i, const libqt_string symbol);
libqt_string QLocale_ToCurrencyString27(const QLocale* self, unsigned int i, const libqt_string symbol);
libqt_string QLocale_ToCurrencyString28(const QLocale* self, double param1, const libqt_string symbol);
libqt_string QLocale_ToCurrencyString32(const QLocale* self, double param1, const libqt_string symbol, int precision);
libqt_string QLocale_ToCurrencyString29(const QLocale* self, float i, const libqt_string symbol);
libqt_string QLocale_ToCurrencyString33(const QLocale* self, float i, const libqt_string symbol, int precision);
libqt_string QLocale_FormattedDataSize2(const QLocale* self, long long bytes, int precision);
libqt_string QLocale_FormattedDataSize3(const QLocale* self, long long bytes, int precision, int format);
libqt_string QLocale_LanguageToCode2(uint16_t language, int codeTypes);
libqt_string QLocale_QuoteString22(const QLocale* self, const libqt_string str, int style);