QtBeef/src/Qt/qlocale.bf

	[LinkName("QLocale_CountryToString")]
	public static extern libqt_string QLocale_CountryToString(QLocale_Country country);
	[LinkName("QLocale_ScriptToString")]
	public static extern libqt_string QLocale_ScriptToString(QLocale_Script script);
	[LinkName("QLocale_SetDefault")]
	public static extern void QLocale_SetDefault(QLocale_Ptr* locale);
	[LinkName("QLocale_C")]
	public static extern QLocale_Ptr* QLocale_C();
	[LinkName("QLocale_System")]
	public static extern QLocale_Ptr* QLocale_System();
	[LinkName("QLocale_MatchingLocales")]
	public static extern void* QLocale_MatchingLocales(QLocale_Language language, QLocale_Script script, QLocale_Country territory);
	[LinkName("QLocale_CountriesForLanguage")]
	public static extern void* QLocale_CountriesForLanguage(QLocale_Language lang);
	[LinkName("QLocale_SetNumberOptions")]
	public static extern void QLocale_SetNumberOptions(QLocale_Ptr* self, void* options);
	[LinkName("QLocale_NumberOptions")]
	public static extern void* QLocale_NumberOptions(QLocale_Ptr* self);
	[LinkName("QLocale_QuoteString")]
	public static extern libqt_string QLocale_QuoteString(QLocale_Ptr* self, libqt_string str);
	[LinkName("QLocale_CreateSeparatedList")]
	public static extern libqt_string QLocale_CreateSeparatedList(QLocale_Ptr* self, void** strl);
	[LinkName("QLocale_ToShort22")]
	public static extern c_ushort QLocale_ToShort22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToUShort22")]
	public static extern c_ushort QLocale_ToUShort22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToInt22")]
	public static extern c_int QLocale_ToInt22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToUInt22")]
	public static extern c_uint QLocale_ToUInt22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToLong22")]
	public static extern c_long QLocale_ToLong22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToULong22")]
	public static extern c_ulong QLocale_ToULong22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToLongLong22")]
	public static extern c_longlong QLocale_ToLongLong22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToULongLong22")]
	public static extern c_ulonglong QLocale_ToULongLong22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToFloat22")]
	public static extern float QLocale_ToFloat22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToDouble22")]
	public static extern double QLocale_ToDouble22(QLocale_Ptr* self, libqt_string s, bool* ok);
	[LinkName("QLocale_ToString24")]
	public static extern libqt_string QLocale_ToString24(QLocale_Ptr* self, double f, c_char format);
	[LinkName("QLocale_ToString32")]
	public static extern libqt_string QLocale_ToString32(QLocale_Ptr* self, double f, c_char format, c_int precision);
	[LinkName("QLocale_ToString25")]
	public static extern libqt_string QLocale_ToString25(QLocale_Ptr* self, float f, c_char format);
	[LinkName("QLocale_ToString33")]
	public static extern libqt_string QLocale_ToString33(QLocale_Ptr* self, float f, c_char format, c_int precision);
	[LinkName("QLocale_ToString26")]
	public static extern libqt_string QLocale_ToString26(QLocale_Ptr* self, QDate_Ptr* date, QLocale_FormatType format);
	[LinkName("QLocale_ToString27")]
	public static extern libqt_string QLocale_ToString27(QLocale_Ptr* self, QTime_Ptr* time, QLocale_FormatType format);
	[LinkName("QLocale_ToString28")]
	public static extern libqt_string QLocale_ToString28(QLocale_Ptr* self, QDateTime_Ptr* dateTime, QLocale_FormatType format);
	[LinkName("QLocale_DateFormat1")]
	public static extern libqt_string QLocale_DateFormat1(QLocale_Ptr* self, QLocale_FormatType format);
	[LinkName("QLocale_TimeFormat1")]
	public static extern libqt_string QLocale_TimeFormat1(QLocale_Ptr* self, QLocale_FormatType format);
	[LinkName("QLocale_DateTimeFormat1")]
	public static extern libqt_string QLocale_DateTimeFormat1(QLocale_Ptr* self, QLocale_FormatType format);
	[LinkName("QLocale_ToDate22")]
	public static extern QDate_Ptr* QLocale_ToDate22(QLocale_Ptr* self, libqt_string stringVal, QLocale_FormatType param2);
	[LinkName("QLocale_ToTime22")]
	public static extern QTime_Ptr* QLocale_ToTime22(QLocale_Ptr* self, libqt_string stringVal, QLocale_FormatType param2);
	[LinkName("QLocale_ToDateTime22")]
	public static extern QDateTime_Ptr* QLocale_ToDateTime22(QLocale_Ptr* self, libqt_string stringVal, QLocale_FormatType format);
	[LinkName("QLocale_MonthName2")]
	public static extern libqt_string QLocale_MonthName2(QLocale_Ptr* self, c_int param1, QLocale_FormatType format);
	[LinkName("QLocale_StandaloneMonthName2")]
	public static extern libqt_string QLocale_StandaloneMonthName2(QLocale_Ptr* self, c_int param1, QLocale_FormatType format);
	[LinkName("QLocale_DayName2")]
	public static extern libqt_string QLocale_DayName2(QLocale_Ptr* self, c_int param1, QLocale_FormatType format);
	[LinkName("QLocale_StandaloneDayName2")]
	public static extern libqt_string QLocale_StandaloneDayName2(QLocale_Ptr* self, c_int param1, QLocale_FormatType format);
	[LinkName("QLocale_CurrencySymbol1")]
	public static extern libqt_string QLocale_CurrencySymbol1(QLocale_Ptr* self, QLocale_CurrencySymbolFormat param1);
	[LinkName("QLocale_ToCurrencyString22")]
	public static extern libqt_string QLocale_ToCurrencyString22(QLocale_Ptr* self, c_longlong param1, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString23")]
	public static extern libqt_string QLocale_ToCurrencyString23(QLocale_Ptr* self, c_ulonglong param1, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString24")]
	public static extern libqt_string QLocale_ToCurrencyString24(QLocale_Ptr* self, c_ushort i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString25")]
	public static extern libqt_string QLocale_ToCurrencyString25(QLocale_Ptr* self, c_ushort i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString26")]
	public static extern libqt_string QLocale_ToCurrencyString26(QLocale_Ptr* self, c_int i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString27")]
	public static extern libqt_string QLocale_ToCurrencyString27(QLocale_Ptr* self, c_uint i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString28")]
	public static extern libqt_string QLocale_ToCurrencyString28(QLocale_Ptr* self, double param1, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString32")]
	public static extern libqt_string QLocale_ToCurrencyString32(QLocale_Ptr* self, double param1, libqt_string symbol, c_int precision);
	[LinkName("QLocale_ToCurrencyString29")]
	public static extern libqt_string QLocale_ToCurrencyString29(QLocale_Ptr* self, float i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString33")]
	public static extern libqt_string QLocale_ToCurrencyString33(QLocale_Ptr* self, float i, libqt_string symbol, c_int precision);
	[LinkName("QLocale_FormattedDataSize2")]
	public static extern libqt_string QLocale_FormattedDataSize2(QLocale_Ptr* self, c_longlong bytes, c_int precision);
	[LinkName("QLocale_FormattedDataSize3")]
	public static extern libqt_string QLocale_FormattedDataSize3(QLocale_Ptr* self, c_longlong bytes, c_int precision, void* format);
	[LinkName("QLocale_LanguageToCode2")]
	public static extern libqt_string QLocale_LanguageToCode2(QLocale_Language language, void* codeTypes);
	[LinkName("QLocale_QuoteString22")]
	public static extern libqt_string QLocale_QuoteString22(QLocale_Ptr* self, libqt_string str, QLocale_QuotationStyle style);
}
